--- a/first.html
+++ b/first.html
@@ -3,7 +3,7 @@
         <span> First Program</span>
     </head>
     <body>
-        <div> inline elements, 
-            block elements</div>
-    </body>
+        <div> inline elements </div>
+    </b
+    ody>
 </html>
