My first commit

--- a/first.html
+++ b/first.html
@@ -3,7 +3,7 @@
         <span> First Program</span>
     </head>
     <body>
-        <div> inline elements </div>
+        <div> Hello HTML</div>
     </b
     ody>
 </html>
